Continues the movement.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -31,7 +31,8 @@
       <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>25. Learn History List Refresh!</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>26. Learn Award List Refresh!</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>27. Learn Object List Refresh!</strike></li>
-      <li class="list-group-item list-group-item-info"><span class="badge">35</span>28. Average score in Learn Award!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>28. Average score in Learn Award!</strike></li>
+      <li class="list-group-item list-group-item-danger"><span class="badge">5</span>29. The sorting in UI-Grid now working because they are all string!</li>
       <li class="list-group-item list-group-item-danger"><span class="badge">3</span>Others</li>
     </ul>
   </div>
