--- a/app/views/learnhistory.html
+++ b/app/views/learnhistory.html
@@ -19,7 +19,7 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptObject" translate="Learn.LearingObject">Learn Objects</label>
+			<label class="control-label col-sm-2" for="iptObject" translate="Learn.LearningObject">Learn Objects</label>
 			<div class="col-sm-10">
 				<ui-select ng-model="SelectedLearnObject.selected" theme="select2"  search-enabled="selectsearchenable" ng-disabled="isReadonly" style="min-width: 300px;">
 			    	<ui-select-match placeholder="Select a learn object or search via the name...">{{$select.selected.name}}</ui-select-match>
