--- a/app/views/userdetail.html
+++ b/app/views/userdetail.html
@@ -1,9 +1,9 @@
 <div id="viewUserDetail">
-	<table st-table="displayedCollection" class="table table-striped">
+	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
-				<th st-sort="userobj" translate="Common.Object">Object</th>
-				<th st-sort="usercont" translate="Common.Content">Content</th>
+				<th translate="Common.Object">Object</th>
+				<th translate="Common.Content">Content</th>
 			</tr>
 		</thead>
 		<tbody>
