--- a/app/views/financeaccount.html
+++ b/app/views/financeaccount.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceAccount">
 	<div class="page-header">
 		<h2>
-			Finance Account<small> {{Activity}}</small>
+			<span translate="Finance.Accounts">Finance Account</span><small> {{Activity}}</small>
 		</h2>
 	</div>
 
