--- a/app/views/financetransactiontypelist.html
+++ b/app/views/financetransactiontypelist.html
@@ -2,10 +2,28 @@
 
 	<div class="page-header">
 		<h2>
-			Finance Transaction Type <small translate="Common.ListView"> List View </small>
+			<span translate="Finance.TransactionType">Finance Transaction Type</span> <small translate="Common.ListView"> List View </small>
 		</h2>
 	</div>
 
-	<div id="gridFinTranType" ui-grid="gridOptions" ui-grid-selection
-		 style="width: 100%; height: 500px;"></div>
+	<table class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th translate="Common.ID">ID</th>
+				<th translate="Common.Name">Name</th>
+				<th translate="Finance.ExpenseFlag">Expense Flag</th>
+				<th translate="Common.Parent">Parent</th>
+				<th translate="Common.Comment">Comment</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in arList">
+				<td>{{row.id}}</td>
+				<td>{{row.name}}</td>
+				<td>{{row.expenseflag}}</td>
+				<td>{{row.parent}}</td>
+				<td>{{row.comment}}</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
