--- a/app/views/userlist.html
+++ b/app/views/userlist.html
@@ -5,7 +5,19 @@
 		</h2>
 	</div>
 
-	<div id="gridUserList" ui-grid="gridOptions" ui-grid-selection
-		 style="width: 100%; height: 500px;"></div> 
+	<table class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th translate="Login.User">User</th>
+				<th translate="Login.DisplayAs">Display As</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in arList">
+				<td>{{row.id}}</td>
+				<td>{{row.text}}</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 	
