Continues the development.

--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceDocument">
 	<div class="page-header">
 		<h2>
-			Finance Document<small> {{Activity}}</small>
+			<span translate="Finance.Document">Finance Document</span><small> {{Activity}}</small>
 		</h2>
 	</div>
 
