--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -2,61 +2,33 @@
 
 	<div class="page-header">
 		<h2>
-			Finance Document <small translate="Common.ListView"> List View </small>
+			<span translate="Finance.Documents">Finance Document</span><small translate="Common.ListView"> List View </small>
 		</h2>
-		<button type="button" class="btn btn-primary" ng-click="newItem()">New</button>
+
+		<div class="btn-toolbar" role="toolbar" aria-label="...">
+		  <div class="btn-group" role="group" aria-label="...">
+			<button type="button" class="btn-group btn-primary" ng-click="newItem()" translate="Common.New">New</button>
+			<button type="button" class="btn-group btn-primary" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
+		  </div>
+		  
+		  <div class="btn-group" role="group" aria-label="...">
+  			<button type="button" ng-click="displayItem()" ng-disabled="selectedRows.length <= 0"
+					class="btn-group btn-primary" tooltip="{{'Common.Display' | translate}}"
+					translate="Common.Display">					
+			</button>
+			<button type="button" ng-click="editItem()" ng-disabled="selectedRows.length <= 0"
+					class="btn-group btn-warning" tooltip="{{'Common.Edit' | translate}}"
+					translate="Common.Edit">
+			</button>
+			<button type="button" ng-click="removeItem()" ng-disabled="selectedRows.length <= 0"
+					class="btn-group btn-danger" tooltip="{{'Common.Delete' | translate}}"
+					translate="Common.Delete">
+			</button>
+		  </div>
+		</div>
 	</div>
 
-	<table st-table="displayedCollection" st-safe-src="rowCollection"
-		class="table table-striped">
-		<thead>
-			<tr>
-				<th st-sort="docid">Doc ID</th>
-				<th st-sort="doctypename">Doc Type</th>
-				<th st-sort="trandate">Tran Date</th>
-				<th st-sort="trancurr">Currency</th>
-				<th st-sort="trancurrname">Currency</th>
-				<th st-sort="tranamount">Amount</th>
-				<th st-sort="desp">Desp</th>
-			</tr>
-			<tr>
-				<th colspan="8"><input st-search="" class="form-control" placeholder="global search ..." type="text" /></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="row in displayedCollection">
-				<td>{{row.docid}}</td>
-				<td>{{row.doctypename}}</td>
-				<td>{{row.trandate}}</td>
-				<td>{{row.trancurr}}</td>
-				<td>{{row.trancurrname}}</td>
-				<td>{{row.tranamount}}</td>
-				<td>{{row.desp}}</td>
-				<td>
-					<div class="btn-group" role="group">
-						<button type="button" ng-click="displayItem(row)"
-							class="btn-group btn-primary" role="group">
-							<i class="glyphicon glyphicon-share"> </i>
-						</button>
-						<button type="button" ng-click="editItem(row)"
-							class="btn-group btn-warning" role="group">
-							<i class="glyphicon glyphicon-edit"> </i>
-						</button>
-						<button type="button" ng-click="removeItem(row)"
-							class="btn-group btn-danger" role="group">
-							<i class="glyphicon glyphicon-trash"> </i>
-						</button>
-					</div>					
-				</td>
-			</tr>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td colspan="5" class="text-center">
-					<div st-pagination="" st-items-by-page="itemsByPage"></div>
-				</td>
-			</tr>
-		</tfoot>	
-    </table>
+	<div id="gridFinDocs" ui-grid="gridOptions" ui-grid-selection
+		 style="width: 100%; height: 500px;"></div>
 </div>
 
