--- a/app/views/learnobjectlist.html
+++ b/app/views/learnobjectlist.html
@@ -28,6 +28,6 @@
 		</div>
 	</div>
 
-	<div id="grid1" ui-grid="gridOptions" ui-grid-selection
+	<div id="gridlearnobj" ui-grid="gridOptions" ui-grid-selection
 		 style="width: 100%; height: 500px;"></div>
 </div>
