Change-Id: I5bbe8a9f26a439eb126dbb68487a843d411c9246 Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financeaccount.html
+++ b/app/views/financeaccount.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceAccount">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.Accounts">Finance Account</span><small> {{Activity}}</small>
+			<span translate="Finance.Accounts">Finance Account</span><small> {{Activity | translate}}</small>
 		</h2>
 	</div>
 
