--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceDocument">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.Document">Finance Document</span><small> {{Activity}}</small>
+			<span translate="Finance.Document">Finance Document</span><small> {{Activity | translate}}</small>
 		</h2>
 	</div>
 
@@ -143,7 +143,7 @@
 
         <!-- Item Detail -->
         <div class="container">
-            <div>{{ItemActivity}}</div>
+            <div>{{ItemActivity | translate}}</div>
             <form class="form-horizontal" role="form" name="frmItem">
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptItemID">Item ID:</label>
