--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -92,7 +92,7 @@
 
     <!-- Items -->
     <div class="container" ng-show="!showhdr">
-    	<div id="gridFinDocItems" ui-grid="gridOptions" ui-grid-selection
+    	<div id="gridFinDocItems" ui-grid="gridOptions" ui-grid-cellNav
 		 	style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
