JavaScript OO concepts applying, part II.

--- a/app/views/userlist.html
+++ b/app/views/userlist.html
@@ -14,8 +14,8 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in arList">
-				<td>{{row.id}}</td>
-				<td>{{row.text}}</td>
+				<td>{{row.UserID}}</td>
+				<td>{{row.DisplayAs}}</td>
 			</tr>
 		</tbody>
 	</table>
