Continues the JavaScript OO adoption, part VII.

--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -18,7 +18,7 @@
 			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
 			<div class="col-sm-10">
 				<select id="iptCtgy" ng-model="ObjectCategoryID" ng-disabled="isReadonly"
-					ng-options="ctgy.id as ctgy.text for ctgy in CategoryIDs">
+					ng-options="ctgy.ID as ctgy.FullDisplayText for ctgy in CategoryIDs">
 					<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
       					Example 2: usertype.value as usertype.text for usertype in userTypes 
       				-->
