--- a/app/views/learnobject.html
+++ b/app/views/learnobject.html
@@ -10,14 +10,14 @@
 			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="ObjectID">
+					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="objLearnObject.ID">
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
 			<div class="col-sm-10">
-				<select id="iptCtgy" ng-model="ObjectCategoryID" ng-disabled="isReadonly"
+				<select id="iptCtgy" ng-model="objLearnObject.CategoryID" ng-disabled="isReadonly"
 					ng-options="ctgy.ID as ctgy.FullDisplayText for ctgy in CategoryIDs">
 					<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
       					Example 2: usertype.value as usertype.text for usertype in userTypes 
@@ -30,7 +30,7 @@
 			<label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-						placeholder="{{'Common.Name' | translate}}" ng-model="ObjectName" required>
+						placeholder="{{'Common.Name' | translate}}" ng-model="objLearnObject.Name" required>
 			</div>
 		</div>
 		
@@ -38,7 +38,7 @@
 			<label class="control-label col-sm-2" for="iptContent" translate="Common.Content">Content</label>
 			<div class="col-sm-10">
 				<textarea ui-tinymce="tinymceOptions" rows="20" ng-readonly="isReadonly"
-					        ng-model="ObjectContent"></textarea>
+					        ng-model="objLearnObject.Content"></textarea>
 			</div>
 		</div>
 
