Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financecurrencylist.html
+++ b/app/views/financecurrencylist.html
@@ -16,9 +16,9 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in arList">
-				<td>{{row.curr}}</td>
-				<td>{{row.name}}</td>
-				<td>{{row.symbol}}</td>
+				<td>{{row.Currency}}</td>
+				<td>{{row.Name}}</td>
+				<td>{{row.Symbol}}</td>
 			</tr>
 		</tbody>
 	</table>
