--- a/app/views/financedocumenttypelist.html
+++ b/app/views/financedocumenttypelist.html
@@ -16,9 +16,9 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in arList">
-				<td>{{row.id}}</td>
-				<td>{{row.name}}</td>
-				<td>{{row.comment}}</td>
+				<td>{{row.ID}}</td>
+				<td>{{row.Name}}</td>
+				<td>{{row.Comment}}</td>
 			</tr>
 		</tbody>
 	</table>
