--- a/app/views/financeaccount.html
+++ b/app/views/financeaccount.html
@@ -7,15 +7,15 @@
 
 	<form class="form-horizontal" role="form" name="frmObj">
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptID">ID:</label>
+			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID:</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-						readonly="readonly" placeholder="ID" ng-model="AccountID">
+						readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="AccountID">
 			</div>
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptCtgy">Category:</label>
+			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
 			<div class="col-sm-10">
 				<ui-select ng-model="AccountCategory.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
 			    	<ui-select-match placeholder="Select a category via the name...">{{$select.selected.name}}</ui-select-match>
