--- a/app/css/app.css
+++ b/app/css/app.css
@@ -69,3 +69,11 @@ to prevent collapsing during animation*/
 	-moz-transform: translate3d(100px, 0, 0);
 	transform: translate3d(100px, 0, 0);
 }
+
+/* For the width of the textarea */
+/* However, it seems it doesn't working! 2015.8.24 */
+.boxsizingBorder {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
