--- a/app/views/financeaccount.html
+++ b/app/views/financeaccount.html
@@ -10,20 +10,20 @@
 			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID:</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptID"
-						readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="AccountID">
+						readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="AccountObject.ID">
 			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
 			<div class="col-sm-10">
-				<ui-select ng-model="AccountCategory.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="Select a category via the name...">{{$select.selected.name}}</ui-select-match>
+				<ui-select ng-model="AccountCategoryObject.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+			    	<ui-select-match placeholder="{{'Common.SearchViaName' | translate}}">{{$select.selected.Name}}</ui-select-match>
 			    	<ui-select-choices repeat="acntctgy in AllAccountCategories">
-			      		<div ng-bind-html="acntctgy.name | highlight: $select.search"></div>
+			      		<div ng-bind-html="acntctgy.Name | highlight: $select.search"></div>
 			      		<small>
-			      			ID: {{acntctgy.id}} <br />			      			
-			        		Name: <span ng-bind-html="+acntctgy.name | highlight: $select.search"></span>
+			      			ID: {{acntctgy.ID}} <br />			      			
+			        		Name: <span ng-bind-html="+acntctgy.Name | highlight: $select.search"></span>
 			      		</small>
 			    	</ui-select-choices>
 				</ui-select>
@@ -31,26 +31,26 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptName">Name</label>
+			<label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-						placeholder="Name" ng-model="AccountName" required>
+						placeholder="{{'Common.Name' | translate}}" ng-model="AccountObject.Name" required>
 			</div>
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptContent">Comment</label>
+			<label class="control-label col-sm-2" for="iptContent" translate="Common.Comment">Comment</label>
 			<div class="col-sm-10">
 				<textarea rows="5" ng-readonly="isReadonly" id="iptContent"
-							ng-model="AccountComment"></textarea>
+						ng-model="AccountObject.Comment"></textarea>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-					ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
-				<button class="btn btn-danger" ng-click="close()">Cancel</button>
+					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
 			</div>
 		</div>
 	</form>
