Continues the development.

--- a/app/views/financetransactiontypelist.html
+++ b/app/views/financetransactiontypelist.html
@@ -18,11 +18,11 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="row in arList">
-				<td>{{row.id}}</td>
-				<td>{{row.name}}</td>
-				<td>{{row.expenseflag}}</td>
-				<td>{{row.parent}}</td>
-				<td>{{row.comment}}</td>
+				<td>{{row.ID}}</td>
+				<td>{{row.Name}}</td>
+				<td>{{row.ExpenseFlag}}</td>
+				<td>{{row.ParentID}}</td>
+				<td>{{row.Comment}}</td>
 			</tr>
 		</tbody>
 	</table>
