Continues the development.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -140,6 +140,12 @@
 	                            <li><a ui-sref="home.finance.account.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.account.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
+								<li class="dropdown-header"><span translate="Finance.ControlCenter">Control Center</span></li>
+	                            <li><a ui-sref="home.finance.controlcenter.list"><span translate="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.controlcenter.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+								<li role="separator" class="divider"></li>
+	                            <li><a ui-sref="home.finance.order.list">Orders</a></li>
+								<li role="separator" class="divider"></li>
 								<li class="dropdown-header"><span translate="Finance.Documents">Finance Documents</span></li>
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
