--- a/app/views/financecchierarchy.html
+++ b/app/views/financecchierarchy.html
@@ -1,7 +1,13 @@
 <div id="viewFinanceCCHierarchy">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.ControllingCenter">Controlling Center</span><small> Hierarchy View</small>
+			<span translate="Finance.ControlCenter">Control Center</span><small translate="Common.HierarchyView"> Hierarchy View</small>
 		</h2>
-	</div>	
+		<button type="button" class="btn btn-primary" ng-click="newItem()" translate="Common.Create">New</button>
+		<button type="button" class="btn btn-primary" ng-click="refreshHierarchy()" translate="Common.Refresh">Refresh</button>
+	</div>
+	
+	<div class="panel-body">
+		<div js-tree="treeConfig" ng-model="treeData" tree="treeInstance" should-apply="ignoreModelChanges()"></div>
+	</div>
 </div>
