--- a/app/views/financecclist.html
+++ b/app/views/financecclist.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceCCList">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.ControlCenter">Control Center</span><small>List View</small>
+			<span translate="Finance.ControlCenter">Control Center</span><small translate="Common.ListView">List View</small>
 		</h2>
 		
 		<div class="btn-toolbar" role="toolbar" aria-label="...">
