--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -1,7 +1,7 @@
 <div id="viewFinanceOrder">
 	<div class="page-header">
 		<h2>
-			<span translate="Finance.InternalOrder">Order</span><small> {{Activity | translate}}</small>
+			<span translate="Finance.Order">Order</span><small> {{Activity | translate}}</small>
 		</h2>
 	</div>	
 	
@@ -16,7 +16,7 @@
 
     <ul class="nav nav-tabs">
         <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true">Header</a></li>
-        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Settlement Rules</a></li>
+        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Rules</a></li>
     </ul>
 
     <!-- Header -->
@@ -34,25 +34,25 @@
 			     <label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
 			     <div class="col-sm-10">
 				        <input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
-						  placeholder="{{'Common.Name' | translate}}" ng-model="ControlCenterObject.Name" required>
+						       placeholder="{{'Common.Name' | translate}}" ng-model="OrderObject.Name" required>
 			     </div>
 		     </div>
 
-
             <div class="form-group">
-                <label class="control-label col-sm-2">Valid from</label>
+                <label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.Validfrom" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
             </div>
+            
             <div class="form-group">
-                <label class="control-label col-sm-2">Valid to</label>
+                <label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.Validto" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -61,17 +61,9 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocAmount">Amount</label>
+                <label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptDocAmount" ng-readonly="isReadonly"
-                           placeholder="Amount" ng-model="DocumentHeader.DocumentAmount" required>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="iptDocDesp">Desp</label>
-                <div class="col-sm-10">
-                    <textarea id="iptDocDesp" rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentHeader.DocumentDesp"></textarea>
+                    <textarea id="iptComment" rows="5" columns="50" ng-readonly="isReadonly" ng-model="OrderObject.Comment"></textarea>
                 </div>
             </div>
         </form>
@@ -79,8 +71,8 @@
 
     <!-- Items -->
     <div class="container" ng-show="!showhdr">
-    	<div id="gridFinDocItems" ui-grid="gridOptions"
-		 	style="width: 100%; height: 500px;"></div>
+    	<div id="gridOrderSRules" ui-grid="gridOptions"
+		 	 style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
         <div class="container">
