--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -69,7 +69,7 @@
         </form>
     </div>
 
-    <!-- Items -->
+    <!-- Rules -->
     <div class="container" ng-show="!showhdr">
     	<div id="gridOrderSRules" ui-grid="gridOptions"
 		 	 style="width: 100%; height: 500px;"></div>
@@ -81,20 +81,20 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptRuleID">Rule ID:</label>
                     <div class="col-sm-10">
-      					<p class="form-control-static" id="iptRuleID">{{SelectedRule.RuleID}}</p>
+      					<p class="form-control-static" id="iptRuleID">{{SelectedRuleObject.RuleID}}</p>
     				</div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Finance.ControlCenter">Control Center:</label>
                     <div class="col-sm-10">
-                        <ui-select ng-model="SelectedDocumentItem.Account.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                            <ui-select-match placeholder="Select an account via the name...">{{$select.selected.name}}</ui-select-match>
-                            <ui-select-choices repeat="acnt in AllAccounts">
-                                <div ng-bind-html="acnt.name | highlight: $select.search"></div>
+                        <ui-select ng-model="SelectedRuleObject.ControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                            <ui-select-match placeholder="Select a control center via the name...">{{$select.selected.Name}}</ui-select-match>
+                            <ui-select-choices repeat="cc in AllCostCenters">
+                                <div ng-bind-html="cc.Name | highlight: $select.search"></div>
                                 <small>
-                                    ID: {{acnt.id}} <br />
-                                    Name: <span ng-bind-html="''+acnt.name | highlight: $select.search"></span>
+                                    ID: {{cc.ID}} <br />
+                                    Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
                                 </small>
                             </ui-select-choices>
                         </ui-select>
@@ -102,33 +102,17 @@
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptTranType">Transaction Type:</label>
+                    <label class="control-label col-sm-2" for="iptPcnt">Precentage:</label>
                     <div class="col-sm-10">
-                        <ui-select ng-model="SelectedDocumentItem.TranType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                            <ui-select-match placeholder="Select a type via the name...">{{$select.selected.name}}</ui-select-match>
-                            <ui-select-choices repeat="tt in AllTransactionTypes">
-                                <div ng-bind-html="tt.name | highlight: $select.search"></div>
-                                <small>
-                                    ID: {{tt.id}} <br />
-                                    Name: <span ng-bind-html="''+tt.name | highlight: $select.search"></span>
-                                </small>
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemAmt">Amount:</label>
-                    <div class="col-sm-10">
-                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.tranamount"></input>
+                        <input type="text" id="iptPcnt" ng-readonly="isReadonly" ng-model="SelectedRuleObject.Precentage"></input>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemDesp">Desp: </label>
+                    <label class="control-label col-sm-2" for="iptComment">Comment: </label>
                     <div class="col-sm-10">
-                        <textarea rows="5" id="iptItemDesp" ng-readonly="isReadonly" cols="50"
-                                    ng-model="SelectedDocumentItem.desp"></textarea>
+                        <textarea rows="5" id="iptComment" ng-readonly="isReadonly" cols="50"
+                                    ng-model="SelectedRuleObject.Comment"></textarea>
 			        </div>
 		        </div>
 
