--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -41,10 +41,10 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isValidfromDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                        <button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
             </div>
@@ -52,10 +52,10 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isValidtoDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                        <button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
             </div>
@@ -109,10 +109,10 @@
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptComment">Comment: </label>
+                    <label class="control-label col-sm-2" for="iptRuleComment">Comment: </label>
                     <div class="col-sm-10">
-                        <textarea rows="5" id="iptComment" ng-readonly="isReadonly" cols="50"
-                                    ng-model="SelectedRuleObject.Comment"></textarea>
+                        <textarea rows="5" id="iptRuleComment" ng-readonly="isReadonly" cols="50"
+                                  ng-model="SelectedRuleObject.Comment"></textarea>
 			        </div>
 		        </div>
 
