--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -104,7 +104,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptPcnt">Precentage:</label>
                     <div class="col-sm-10">
-                        <input type="number" id="iptPcnt" min="0" max="100" stringToNumber ng-readonly="isReadonly" ng-model="SelectedRuleObject.Precentage" required></input>
+                        <input type="number" id="iptPcnt" min="0" max="100" string-to-number ng-readonly="isReadonly" ng-model="SelectedRuleObject.Precentage" required></input>
                     </div>
                 </div>
                 
