--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -26,7 +26,7 @@
                 <label class="control-label col-sm-2" for="iptID">ID:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptID"
-                           readonly="readonly" placeholder="ID" ng-model="OrderObject.ID">
+                           readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="OrderObject.ID">
                 </div>
             </div>
             
