--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -5,6 +5,13 @@
 		</h2>
 	</div>	
 	
+    <!-- Messages -->
+    <div ng-if="ReportedMessages.length > 0">
+        <div class="alert alert-danger" role="alert" ng-repeat="rptmsg in ReportedMessages">
+            {{ rptmsg | translate }}
+        </div>
+    </div>
+
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-10">
@@ -75,8 +82,9 @@
 		 	 style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
-        <div class="container">
-            <div>{{ItemActivity | translate}}</div>
+        <div class="panel panel-default" style="margin: 30px, 10px;">
+            <div class="panel-heading">{{ItemActivity | translate}}</div>
+            <div class="panel-body">
             <form class="form-horizontal" role="form" name="frmItem">
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptRuleID">Rule ID:</label>
@@ -125,6 +133,7 @@
                     </div>
                 </div>
             </form>
+            </div>
         </div>
     </div>
 </div>
