--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,7 +5,7 @@
 
     <ul class="list-group">
       <li class="list-group-item list-group-item-info"><span class="badge">3</span>1. Empty content in TinyMCE?</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">4</span>2. Learn Category Combo: Hierarchy or adding leading blanks?</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>2. Learn Category Combo: Hierarchy or adding leading blanks?</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>3. Learn Object Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>4. Learn History Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>5. Learn Award Create.</strike></li>
@@ -23,9 +23,9 @@
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>17. Finance Control Center Create.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>18. Finance Control Center Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>19. Finance Control Center Delete.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>20. Finance Internal Order Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>20. Finance Internal Order Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>21. Finance Internal Order Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>22. Finance Internal Order Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>22. Finance Internal Order Delete.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">1</span>23. Random chose the theme during the start?</li>
       <li class="list-group-item list-group-item-info"><span class="badge">4</span>24. Deletion confirm dialog's language!</li>
       <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>25. Learn History List Refresh!</strike></li>
