Now the Control Center Create/Delete/List Read/Hierarchy Read is ready.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -20,9 +20,9 @@
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>14. Finance Document Create.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>15. Finance Document Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>16. Finance Document Delete.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>17. Finance Control Center Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>17. Finance Control Center Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>18. Finance Control Center Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>19. Finance Control Center Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>19. Finance Control Center Delete.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>20. Finance Internal Order Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>21. Finance Internal Order Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>22. Finance Internal Order Delete.</strike></li>
@@ -33,6 +33,9 @@
       <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>27. Learn Object List Refresh!</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>28. Average score in Learn Award!</strike></li>
       <li class="list-group-item list-group-item-danger"><span class="badge">5</span>29. The sorting in UI-Grid now working because they are all string!</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>30. Finance Control Center List Refresh!</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>31. Finance Control Center Hierarchy Refresh!</strike></li>
+      <li class="list-group-item list-group-item-info"><span class="badge">4</span><strike>32. Finance Order List Refresh!</strike></li>
       <li class="list-group-item list-group-item-danger"><span class="badge">3</span>Others</li>
     </ul>
   </div>
