--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -8,7 +8,7 @@
     <!-- Messages -->
     <div ng-if="ReportedMessages.length > 0">
         <div class="alert alert-danger" role="alert" ng-repeat="rptmsg in ReportedMessages">
-            {{ rptmsg | translate }}
+            {{ rptmsg  }}
         </div>
     </div>
 
