Account List view now distinguish the Asset or NonAsset.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -79,3 +79,12 @@ to prevent collapsing during animation*/
             box-sizing: border-box;
 }
 */
+
+/* For Account List Grid */
+/* The commented part are not working! */
+/*
+.accountasset { color: floralwhite;  background-color: yellowgreen; }
+.accountnotasset { color: floralwhite; background-color: firebrick;  }
+*/
+.accountasset { color: yellowgreen; }
+.accountnotasset { color: firebrick;  }
