Continues the development.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -14,9 +14,9 @@
       <li class="list-group-item list-group-item-info"><span class="badge">1</span><strike>8. Default Template instead of real 'default'?</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">2</span>9. Current Template marked in the menu 'Themes'.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">2</span>10. Current Language marked in the menu 'Languages'.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>11. Finance Account Create.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>11. Finance Account Create.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>12. Finance Account Change.</li>
-      <li class="list-group-item list-group-item-info"><span class="badge">5</span>13. Finance Account Delete.</li>
+      <li class="list-group-item list-group-item-info"><span class="badge">5</span><strike>13. Finance Account Delete.</strike></li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>14. Finance Document Create.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>15. Finance Document Change.</li>
       <li class="list-group-item list-group-item-info"><span class="badge">5</span>16. Finance Document Delete.</li>
