Working on Finance Document part.

--- a/app/views/financedocumentlist.html
+++ b/app/views/financedocumentlist.html
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 
-	<div id="gridFinDocs" ui-grid="gridOptions" ui-grid-selection
+	<div id="gridFinDocs" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
 
