--- a/app/views/financeorder.html
+++ b/app/views/financeorder.html
@@ -78,7 +78,7 @@
 
     <!-- Rules -->
     <div class="container" ng-show="!showhdr">
-    	<div id="gridOrderSRules" ui-grid="gridOptions"
+    	<div id="gridOrderSRules" ui-grid="gridOptions" ui-grid-resize-columns
 		 	 style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
