--- a/app/views/financeaccountlist.html
+++ b/app/views/financeaccountlist.html
@@ -28,6 +28,6 @@
 		</div>
 	</div>
 
-	<div id="gridFinAcnts" ui-grid="gridOptions" ui-grid-selection
+	<div id="gridFinAcnts" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
