--- a/app/views/financecclist.html
+++ b/app/views/financecclist.html
@@ -27,6 +27,6 @@
 		</div>
 	</div>	
 
-	<div id="gridFinCCs" ui-grid="gridOptions" ui-grid-selection
+	<div id="gridFinCCs" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
 		 style="width: 100%; height: 500px;"></div>
 </div>
