--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -5,6 +5,13 @@
 		</h2>
 	</div>
 
+    <!-- Messages -->
+    <div ng-if="ReportedMessages.length > 0">
+        <div class="alert alert-danger" role="alert" ng-repeat="rptmsg in ReportedMessages">
+            {{ rptmsg  }}
+        </div>
+    </div>
+    
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-10">
@@ -26,20 +33,20 @@
                 <label class="control-label col-sm-2" for="iptID">ID:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptID"
-                           readonly="readonly" placeholder="ID" ng-model="DocumentHeader.DocumentID">
+                           readonly="readonly" placeholder="ID" ng-model="DocumentObject.DocID">
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocType">Doc. Type:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="DocumentHeader.DocumentType.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.name}}</ui-select-match>
+                    <ui-select ng-model="DocumentObject.DocTypeObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.Name}}</ui-select-match>
                         <ui-select-choices repeat="doctype in AllDocumentTypes">
-                            <div ng-bind-html="doctype.name | highlight: $select.search"></div>
+                            <div ng-bind-html="doctype.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{doctype.id}} <br />
-                                Name: <span ng-bind-html="+doctype.name | highlight: $select.search"></span>
+                                ID: {{doctype.ID}} <br />
+                                Name: <span ng-bind-html="+doctype.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -49,13 +56,13 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Currency:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="DocumentHeader.DocumentCurrency.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.name}}</ui-select-match>
+                    <ui-select ng-model="DocumentObject.TranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
                         <ui-select-choices repeat="acur in AllCurrencies">
-                            <div ng-bind-html="acur.name | highlight: $select.search"></div>
+                            <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{acur.curr}} <br />
-                                Name: <span ng-bind-html="+acur.name | highlight: $select.search"></span>
+                                ID: {{acur.Currency}} <br />
+                                Name: <span ng-bind-html="+acur.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -65,7 +72,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Date</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentHeader.DocumentTranDate" is-open="isDateOpened"
+                    <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="DocumentObject.TranDate" is-open="isDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -77,14 +84,14 @@
                 <label class="control-label col-sm-2" for="iptDocAmount">Amount</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptDocAmount" ng-readonly="isReadonly"
-                           placeholder="Amount" ng-model="DocumentHeader.DocumentAmount" required>
+                           placeholder="Amount" ng-model="DocumentObject.TranAmount" required>
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocDesp">Desp</label>
                 <div class="col-sm-10">
-                    <textarea id="iptDocDesp" rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentHeader.DocumentDesp"></textarea>
+                    <textarea id="iptDocDesp" rows="5" columns="50" ng-readonly="isReadonly" ng-model="DocumentObject.Desp"></textarea>
                 </div>
             </div>
         </form>
@@ -92,7 +99,7 @@
 
     <!-- Items -->
     <div class="container" ng-show="!showhdr">
-    	<div id="gridFinDocItems" ui-grid="gridOptions"
+    	<div id="gridFinDocItems" ui-grid="gridOptions" ui-grid-resize-columns
 		 	style="width: 100%; height: 500px;"></div>
 
         <!-- Item Detail -->
