--- a/app/views/home.html
+++ b/app/views/home.html
@@ -144,7 +144,7 @@
 	                            <li><a ui-sref="home.finance.controlcenter.list"><span translate="Common.ListView">List View</span></a></li>
 								<li><a ui-sref="home.finance.controlcenter.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 								<li role="separator" class="divider"></li>
-	                            <li><a ui-sref="home.finance.order.list">Orders</a></li>
+	                            <li><a ui-sref="home.finance.order.list"><span translate="Finance.Order">Orders</span></a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header"><span translate="Finance.Documents">Finance Documents</span></li>
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
